--- a/Credit Card Frauds/A2 BD1.ipynb
+++ b/Credit Card Frauds/A2 BD1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "[1000000 rows x 8 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "4              0.0           1.0    0.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "999999              0.0           1.0    0.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
        "(1000000, 8)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
        "max           1.000000        1.000000        1.000000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
        "fraud                           0.000000  0.000000   0.000000      1.000000  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -963,48 +963,73 @@
       "0.0    912597\n",
       "1.0     87403\n",
       "Name: count, dtype: int64\n",
+      "fraud\n",
+      "0.0    0.912597\n",
+      "1.0    0.087403\n",
+      "Name: proportion, dtype: float64\n",
       "-----------------------------------------\n",
       "repeat_retailer\n",
       "1.0    881536\n",
       "0.0    118464\n",
       "Name: count, dtype: int64\n",
+      "repeat_retailer\n",
+      "1.0    0.881536\n",
+      "0.0    0.118464\n",
+      "Name: proportion, dtype: float64\n",
       "-----------------------------------------\n",
       "used_chip\n",
       "0.0    649601\n",
       "1.0    350399\n",
       "Name: count, dtype: int64\n",
+      "used_chip\n",
+      "0.0    0.649601\n",
+      "1.0    0.350399\n",
+      "Name: proportion, dtype: float64\n",
       "-----------------------------------------\n",
       "used_pin_number\n",
       "0.0    899392\n",
       "1.0    100608\n",
       "Name: count, dtype: int64\n",
+      "used_pin_number\n",
+      "0.0    0.899392\n",
+      "1.0    0.100608\n",
+      "Name: proportion, dtype: float64\n",
       "-----------------------------------------\n",
       "online_order\n",
       "1.0    650552\n",
       "0.0    349448\n",
-      "Name: count, dtype: int64\n"
+      "Name: count, dtype: int64\n",
+      "online_order\n",
+      "1.0    0.650552\n",
+      "0.0    0.349448\n",
+      "Name: proportion, dtype: float64\n"
      ]
     }
    ],
    "source": [
     "print(frauds['fraud'].value_counts())\n",
+    "print(frauds['fraud'].value_counts(normalize=True))\n",
     "\n",
     "print('-----------------------------------------')\n",
     "print(frauds['repeat_retailer'].value_counts())\n",
+    "print(frauds['repeat_retailer'].value_counts(normalize=True))\n",
     "\n",
     "print('-----------------------------------------')\n",
     "print(frauds['used_chip'].value_counts())\n",
+    "print(frauds['used_chip'].value_counts(normalize=True))\n",
     "\n",
     "print('-----------------------------------------')\n",
     "print(frauds['used_pin_number'].value_counts())\n",
+    "print(frauds['used_pin_number'].value_counts(normalize=True))\n",
     "\n",
     "print('-----------------------------------------')\n",
-    "print(frauds['online_order'].value_counts())\n"
+    "print(frauds['online_order'].value_counts())\n",
+    "print(frauds['online_order'].value_counts(normalize=True))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1239,7 @@
        "fraud                               0.191973  1.000000  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1247,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1458,7 @@
        " 'crest_r']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1444,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1516,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1594,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1649,7 +1674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1691,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1723,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1765,7 +1790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1901,7 +1926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1966,7 +1991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2042,7 +2067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -2092,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2129,7 +2154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -2222,7 +2247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -2307,7 +2332,7 @@
        "1.0           0.003123      0.946318  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2318,7 +2343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2397,7 +2422,7 @@
        "online_order                     0.622225   0.946318"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
