--- a/Credit Card Frauds/A2 BD1.ipynb
+++ b/Credit Card Frauds/A2 BD1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "[1000000 rows x 8 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "4              0.0           1.0    0.0  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
        "999999              0.0           1.0    0.0  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
        "(1000000, 8)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +583,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
        "max           1.000000        1.000000        1.000000  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
        "fraud                           0.000000  0.000000   0.000000      1.000000  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1060,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index                                 128\n",
+       "distance_from_home                8000000\n",
+       "distance_from_last_transaction    8000000\n",
+       "ratio_to_median_purchase_price    8000000\n",
+       "repeat_retailer                   8000000\n",
+       "used_chip                         8000000\n",
+       "used_pin_number                   8000000\n",
+       "online_order                      8000000\n",
+       "fraud                             8000000\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frauds.memory_usage()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1268,7 @@
        "fraud                               0.191973  1.000000  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1458,7 +1487,7 @@
        " 'crest_r']"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1469,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1541,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1580,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1674,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1716,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1748,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1790,22 +1819,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24696\\755977741.py:6: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24472\\755977741.py:6: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axes[0,0].set_xticklabels(['NÃO', 'SIM'])\n",
-      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24696\\755977741.py:11: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24472\\755977741.py:11: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axes[0,1].set_xticklabels(['NÃO', 'SIM'])\n",
-      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24696\\755977741.py:16: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24472\\755977741.py:16: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axes[0,2].set_xticklabels(['NÃO', 'SIM'])\n",
-      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24696\\755977741.py:21: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24472\\755977741.py:21: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axes[1,0].set_xticklabels(['NÃO', 'SIM'])\n",
-      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24696\\755977741.py:26: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24472\\755977741.py:26: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axes[1,1].set_xticklabels(['NÃO', 'SIM'])\n"
      ]
     },
@@ -1861,20 +1890,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24696\\1504578788.py:7: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24472\\1504578788.py:7: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axes[0].set_xticklabels(['NÃO', 'SIM'])\n",
-      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24696\\1504578788.py:12: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24472\\1504578788.py:12: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axes[1].set_xticklabels(['NÃO', 'SIM'])\n",
-      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24696\\1504578788.py:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24472\\1504578788.py:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axes[2].set_xticklabels(['NÃO', 'SIM'])\n",
-      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24696\\1504578788.py:22: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24472\\1504578788.py:22: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axes[3].set_xticklabels(['NÃO', 'SIM'])\n"
      ]
     },
@@ -1926,20 +1955,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24696\\924082648.py:7: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24472\\924082648.py:7: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axes[0].set_xticklabels(['NÃO', 'SIM'])\n",
-      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24696\\924082648.py:12: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24472\\924082648.py:12: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axes[1].set_xticklabels(['NÃO', 'SIM'])\n",
-      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24696\\924082648.py:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24472\\924082648.py:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axes[2].set_xticklabels(['NÃO', 'SIM'])\n",
-      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24696\\924082648.py:22: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24472\\924082648.py:22: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axes[3].set_xticklabels(['NÃO', 'SIM'])\n"
      ]
     },
@@ -1991,20 +2020,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24696\\1735939113.py:12: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24472\\1735939113.py:12: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axes[0].set_xticklabels(['NÃO', 'SIM'])\n",
-      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24696\\1735939113.py:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24472\\1735939113.py:17: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axes[1].set_xticklabels(['NÃO', 'SIM'])\n",
-      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24696\\1735939113.py:22: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24472\\1735939113.py:22: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axes[2].set_xticklabels(['NÃO', 'SIM'])\n",
-      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24696\\1735939113.py:27: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "C:\\Users\\CARLOS\\AppData\\Local\\Temp\\ipykernel_24472\\1735939113.py:27: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
       "  axes[3].set_xticklabels(['NÃO', 'SIM'])\n"
      ]
     },
@@ -2067,7 +2096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2117,7 +2146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2154,7 +2183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2247,7 +2276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2332,7 +2361,7 @@
        "1.0           0.003123      0.946318  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2343,7 +2372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2422,7 +2451,7 @@
        "online_order                     0.622225   0.946318"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
